Fix combs on mobile

--- a/less/style.less
+++ b/less/style.less
@@ -822,6 +822,9 @@ nav{
     width:100%;
     text-align:center;
     margin:0 auto;
+    @media( max-width: @mobile-max ){
+      top: 100px;
+    }
     .text {
       border-bottom:5px solid #3cd52e;
       font-size:16px;
@@ -862,6 +865,9 @@ nav{
   }
   .section-text {
     padding:40px 80px;
+    @media( max-width: @mobile-max ){
+      padding: 130px 10px;
+    }
   }
   .links-bar {
     margin:40px -30px 0 -30px;
@@ -892,94 +898,150 @@ nav{
   .explore-intro {
     margin:1em 0 0 0;
     color:#ffffff;
+    @media( max-width: @mobile-max ){
+      font-size: 14px;
+      text-align: left;
+      font-family: Seravek;
+      display: block;
+      padding-left: 10px;
+    }
   }
+
+  @mobile-scale-factor: 0.5;
   @comb-width: 217px;
   @comb-height: 228px;
   @comb-right-margin: 20px;
   @comb-top-margin: -30px;
   .comb-dimensions( @width, @height ){
-    @right: (@comb-right-margin/@comb-width)*@width;
     @top: (@comb-top-margin/@comb-height)*@height;
     width: @width;
     height: @height;
     background-size: @width @height;
-    margin: 0 0 @comb-top-margin 0;
+    margin: 0 0 @top 0;
   }
   .combs-container {
-    margin:40px auto 0 auto;
+    @desktop-width: 815px + 2*@comb-right-margin; 
+    @tablet-width: 580px + 2*@comb-right-margin; 
+    @mobile-width: @tablet-width * @mobile-scale-factor; 
+    width: @desktop-width;
     padding-left: @comb-right-margin;
+    margin: 40px auto 0 auto;
     text-align:left;
-    width: 815px + 2*@comb-right-margin;
     @media( max-width: @tablet-max ){
-      width: 580px + 2*@comb-right-margin;
+      width: @tablet-width;
+    }
+    @media( max-width: @mobile-max ){
+      width: @mobile-width;
+      padding-left: 10px;
     }
     .comb:hover .title, .comb.active .title {
       text-decoration:underline;
     }
     .comb {
+      @height: @comb-height + @comb-top-margin;
+      @width: @comb-width + @comb-right-margin;
+      @row-offset: @comb-right-margin/2 + @comb-width/2;
+      height: @height;
+      width: @width;
       vertical-align:top;
       display:inline-block;
-      height: @comb-height + @comb-top-margin;
-      width:  @comb-width + @comb-right-margin;
       overflow: visible;
       cursor:pointer;
+      @media( max-width: @mobile-max ){
+        height: @height * @mobile-scale-factor;
+        width:  @width * @mobile-scale-factor;
+      }
       &>div{
         .comb-dimensions( @comb-width, @comb-height );
         background-image:url(./images/bg-comb.png);
+        @media( max-width: @mobile-max ){
+          .comb-dimensions( @comb-width * @mobile-scale-factor, @comb-height * @mobile-scale-factor );
+        }
       }
       @media( min-width: @desktop-min ){
         &:nth-child(8n+4) {
-          margin-left: @comb-right-margin/2 + @comb-width/2;
+          margin-left: @row-offset;
         }
       }
       @media( max-width: @tablet-max ){
         &:nth-child(6n+3) {
-          margin-left: @comb-right-margin/2 + @comb-width/2;
+          margin-left: @row-offset;
+        }
+      }
+      @media( max-width: @mobile-max ){
+        &:nth-child(6n+3) {
+          margin-left: @row-offset * @mobile-scale-factor;
         }
       }
       .body {
-        font-size:14px;
-        padding:0 30px;
+        top: 10px;
+        padding: 0 30px;
+        font-size: 14px;
         text-align:center;
-        opacity:0;
+        opacity: 0;
         position:relative;
-        top:10px;
         transition: all 200ms ease;
+        @media( max-width: @mobile-max ){
+          padding: 0 @mobile-scale-factor * 30px;
+          top: @mobile-scale-factor * 10px;
+          font-size: @mobile-scale-factor * 14px;
+        }
       }
       .body.hover {
         opacity:1;
       }
       .icon {
-        width:38px;
         position:relative;
         top:65px;
-        margin:0 auto 20px auto;
         height:38px;
+        width:38px;
+        margin:0 auto 20px auto;
         background-size: contain;
         background-repeat: no-repeat;
         background-position:center center;
         transition: all 200ms ease;
+        @media( max-width: @mobile-max ){
+          top: @mobile-scale-factor * 65px;
+          height: @mobile-scale-factor * 38px;
+          width: @mobile-scale-factor * 38px;
+          margin:0 auto @mobile-scale-factor * 20px auto;
+        }
       }
       .icon.hover {
         top: 10px;
         width: 19px;
-        height: 19px
+        height: 19px;
+        @media( max-width: @mobile-max ){
+          top: @mobile-scale-factor * 10px;
+          width: @mobile-scale-factor * 19px;
+          height: @mobile-scale-factor * 19px
+        }
       }
       .title {
+        top:65px;
+        padding: 0 50px;
         font-size:20px;
         letter-spacing:1px;
         text-transform:uppercase;
         text-align:center;
-        padding: 0 50px;
         line-height: 1.1;
         position:relative;
-        top:65px;
         transition: all 200ms ease;
+        @media( max-width: @mobile-max ){
+          top: @mobile-scale-factor * 65px;
+          padding: 0 @mobile-scale-factor * 50px;
+          font-size: @mobile-scale-factor * 20px;
+        }
       }
       .title.hover {
-        font-size: 14px;
         padding: 0 60px;
         top: 5px;
+        font-size: 14px;
+        @media( max-width: @mobile-max ){
+          padding: 0 @mobile-scale-factor * 60px;
+          top: @mobile-scale-factor * 5px;
+          font-size: @mobile-scale-factor * 14px;
+        }
       }
       &:hover {
         .title {
